--- a/template/lecture.html
+++ b/template/lecture.html
@@ -2,13 +2,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>CS203: Programming with Data Structure</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <div id="content">
 
-<h1>S203: Programming with Data Structure</h1>
+<h1>CS203: Programming with Data Structure</h1>
 
 <h2>Lecture xx</h2>
 
