--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ div.task {
   margin: .8rem 0;
   color: #333; 
   /* color: #7a7a7a; */
+  /* border-left: .25rem solid #e5e5e5; */
   border-left: .25rem solid #e5e5e5;
     /* color: #333; */
     /* padding: 10px; */
